--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.9",
+    "@tanstack/react-query": "^5.90.3",
     "ethers": "^6.15.0",
     "firebase": "^12.4.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "viem": "^2.38.2",
+    "wagmi": "^2.18.1"
   }
 }
